--- a/IMS.Core/IMS.Core.csproj
+++ b/IMS.Core/IMS.Core.csproj
@@ -57,6 +57,8 @@
     <Compile Include="Model\MstrItems.cs" />
     <Compile Include="Model\MstrModules.cs" />
     <Compile Include="Model\MstrFPS.cs" />
+    <Compile Include="Model\TrxRawDataFromLogistics.cs" />
+    <Compile Include="Model\TrxSellOutFromAgency.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\IMSService.cs" />
   </ItemGroup>
